--- a/style.css
+++ b/style.css
@@ -19,6 +19,121 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
+.navbar-nav > li > a {
+  font-size: 18px;
+  line-height: 53px;
+  padding: 23px 13px;
+}
+
+.navbar-nav > li > a:after {
+  content: '|';
+  position: relative;
+  right: -13px;
+}
+
+.navbar-nav > li:last-of-type > a:after {
+  display: none;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-weight: normal;
+}
+
+.container {
+  position: relative;
+}
+
+.navbar-inverse {
+  background: rgba(0, 0, 0, 0.7);
+}
+
+#logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.search-toggle:hover {
+  background: #4d4d4d;
+  background: #4d4d4d;
+}
+
+.search-toggle.active {
+  background: #4d4d4d;
+  background: #4d4d4d;
+}
+
+@media screen and (max-width: 600px) {
+  .search-toggle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 0;
+  }
+}
+
+input[type="search"] {
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.search-box-wrapper {
+  position: absolute;
+  width: 100%;
+  z-index: 10000;
+  display: none;
+}
+
+.search-box {
+  padding: 1em;
+  background: #4d4d4d;
+}
+
+.search-box .search-field {
+  max-width: 362px;
+  float: right;
+  padding: 1rem 2rem 1rem 4rem;
+  font-size: 20px;
+  font-size: 2rem;
+  background-color: #ffffff;
+  border: 0;
+}
+
+.search-box .search-submit {
+  display: none;
+}
+
+.search-toggle {
+  float: right;
+  width: 54px;
+  height: 94px;
+  padding: 40px 12px 60px;
+  margin-right: 20px;
+  margin-left: 30px;
+  color: #ffffff;
+  text-align: center;
+  cursor: pointer;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #cc3333;
+  border-color: #cc3333;
+}
+
+.error404 .search-submit {
+  display: none;
+}
+
+.search .search-submit {
+  display: none;
+}
+
+.screen-reader-text {
+  display: none;
+}
+
 #primary {
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
@@ -241,7 +356,7 @@ object {
   border-color: #cccccc;
   border-radius: 4px;
   border: 1px solid transparent;
-  color: #333333;
+  color: #333;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
@@ -261,7 +376,7 @@ object {
 #commentform #submit:hover {
   background-color: #e6e6e6;
   border-color: #adadad;
-  color: #333333;
+  color: #333;
 }
 
 .search-highlight {
